profilelist1exp/unpackaged/objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>Show_Have_read_Partner_Program_Guide__c</fullName>
        <label>Show Have read Partner Program Guide</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_ISV__c</fullName>
        <label>Show ISV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Join_Dell_PartnerDirect_Program__c</fullName>
        <label>Show Join Dell PartnerDirect Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Large_Enterprise__c</fullName>
        <label>Show Large Enterprise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Managed_Service_Provider__c</fullName>
        <label>Show Managed Service Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Number_of_Branches_Subsidiaries__c</fullName>
        <label>Show Number of Branches Subsidiaries</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_OEM__c</fullName>
        <label>Show OEM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Org_Annual_Revenue__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Annual Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Organization_Industry_Certificate__c</fullName>
        <label>Show Organization Industry Certificate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Other_Customers__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Other Customers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Other__c</fullName>
        <label>Show Other</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Percent_Sales_Force__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Percent Sales Force</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Percent_Technical_Prof__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Percent Technical Prof</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Preferred_Dell_Distr_Partner__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Preferred Dell Distr Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Primary_Channel_Model__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Primary Channel Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Primary_Contact_Aligned__c</fullName>
        <label>Show Primary Contact Aligned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Primary_Customer__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Primary Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Primary_Routes_to_Market__c</fullName>
        <label>Show Primary Routes to Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Primary_Vertical_Market_Segment__c</fullName>
        <label>Show Primary Vertical Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Principle_Name__c</fullName>
        <label>Show Principle Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Principle_Title__c</fullName>
        <label>Show Principle Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Product_Focus__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Product Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Product_Revenue__c</fullName>
        <label>Show Product Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Referral_Partner__c</fullName>
        <label>Show Referral Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Requested_Features__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Requested Features</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Resale_Revenue__c</fullName>
        <label>Show Resale Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Reseller_Tax_ID__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Reseller Tax ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Retailer__c</fullName>
        <label>Show Retailer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Secondary_Customer__c</fullName>
        <label>Show Secondary Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Secondary_Vertical_Market_Segment__c</fullName>
        <label>Show Secondary Vertical Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Service_Revenue_Percent__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Service Revenue Percent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Size_of_Customer_Base__c</fullName>
        <label>Show Size of Customer Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Software_Reseller__c</fullName>
        <label>Show Software Reseller</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Software_Revenue_Percent__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Software Revenue Percent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Solution_Oriented_Reseller__c</fullName>
        <label>Show Solution Oriented Reseller</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_States_Provinces_doing_bus__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show States Provinces doing bus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_System_Integrator__c</fullName>
        <label>Show System Integrator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Technology_Partner__c</fullName>
        <label>Show Technology Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Telco__c</fullName>
        <label>Show Telco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Tertiary_Customer__c</fullName>
        <label>Show Tertiary Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Tertiary_Practice_Area__c</fullName>
        <label>Show Tertiary Practice Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Top_3_Vendors__c</fullName>
        <label>Show Top 3 Vendors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Total_Employees__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Show Total Employees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Total_marketing_professionals__c</fullName>
        <label>Show Total marketing professionals</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Traditional_Reseller__c</fullName>
        <label>Show Traditional Reseller</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_US_Canadian_Provinces__c</fullName>
        <label>Show US Canadian Provinces</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Value_Added_Reseller__c</fullName>
        <label>Show Value-Added Reseller</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_eTailer__c</fullName>
        <label>Show eTailer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_tertiary_customer_segment__c</fullName>
        <label>Show tertiary customer segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Agreement_Hard_copy_Received__c</fullName>
        <label>Task: Agreement Hard-copy Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Show, Required</fullName>
                    <default>true</default>
                    <label>Show, Required</label>
                </value>
                <value>
                    <fullName>Show, Optional</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Check_Credit__c</fullName>
        <label>Task: Check Credit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Show, Required</fullName>
                    <default>true</default>
                    <label>Show, Required</label>
                </value>
                <value>
                    <fullName>Show, Optional</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Check_Denied_Party_List__c</fullName>
        <label>Task: Check Denied Party List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Show, Required</fullName>
                    <default>true</default>
                    <label>Show, Required</label>
                </value>
                <value>
                    <fullName>Show, Optional</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Check_Export_Compliance__c</fullName>
        <label>Task: Check Export Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Show, Required</fullName>
                    <default>true</default>
                    <label>Show, Required</label>
                </value>
                <value>
                    <fullName>Show, Optional</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Enable_Order_Management_access__c</fullName>
        <label>Task: Enable Order Management access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Show, Required</fullName>
                    <default>true</default>
                    <label>Show, Required</label>
                </value>
                <value>
                    <fullName>Show, Optional</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Enable_Premier_Pages_access__c</fullName>
        <label>Task: Enable Premier Pages access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Show, Required</fullName>
                    <default>true</default>
                    <label>Show, Required</label>
                </value>
                <value>
                    <fullName>Show, Optional</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Send_Welcome_Packet_to_Partner__c</fullName>
        <label>Task: Send Welcome Packet to Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Show, Required</fullName>
                    <default>true</default>
                    <label>Show, Required</label>
                </value>
                <value>
                    <fullName>Show, Optional</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Enabled__c</fullName>
        <label>Training Enabled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Fed_OCONUS_Support__c</fullName>
        <label>US FED Specialized Support</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_Currency_Iso_Code__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>User Currency Iso Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Email_Encoding_Key__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>User Email Encoding Key</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Language_Locale_Key__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>User Language Locale Key</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Locale_Sid_Key__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>User Locale Sid Key</label>
        <length>16</length>
        <type>Text</type>
    </fields>
</CustomObject>